[package]
name = "brass"
version = "0.1.0"
authors = ["Damilare Akinlaja damilare@zenturi.co"]
edition = "2021"

[dependencies]
num_enum = {version = "0.5.7"}
strum = "0.24"
strum_macros = "0.24.0"
comet = { git = "https://github.com/Starlight-JS/comet", branch = "multi-threaded" }
comet-extra = { git = "https://github.com/Starlight-JS/comet", branch = "multi-threaded"}